--- a/jboss-standalone/roles/jboss-standalone/tasks/main.yml
+++ b/jboss-standalone/roles/jboss-standalone/tasks/main.yml
@@ -31,7 +31,7 @@
   copy: src=jboss-as-standalone.sh dest=/etc/init.d/jboss mode=0755
   
 - name: Workaround for systemd bug
-  shell: service jboss start && systemctl enable EAP_SERVICE_NAME.service
+  shell: service jboss start && systemctl enable jboss.service
   
 - name: Enable JBoss to be started at boot
   service: name=jboss enabled=yes state=started
