--- a/jboss-standalone/roles/jboss-standalone/tasks/main.yml
+++ b/jboss-standalone/roles/jboss-standalone/tasks/main.yml
@@ -31,7 +31,7 @@
   copy: src=jboss-eap.conf dest=/etc/default mode=0755
   
 - name: Copy the init script
-  copy: src=/usr/share/jboss-eap/bin/init.d/jboss-eap-rhel.sh dest=/etc/init.d/jboss mode=0755
+  command: cp /usr/share/jboss-eap/bin/init.d/jboss-eap-rhel.sh /etc/init.d/jboss 
   
 - name: Workaround for systemd bug
   shell: service jboss start && chkconfig jboss on
